feat(app): add repoSrcUrl
With the repoSrcUrl you can link the source files to your repository on the web.
The {{commit}} placeholder can be used to create a fixed link to the current commit.

Refs #873

--- a/src/templates/partials/component-detail.hbs
+++ b/src/templates/partials/component-detail.hbs
@@ -2,7 +2,11 @@
     <h3>{{t "file" }}</h3>
 </p>
 <p class="comment">
+    {{#if repoSrcUrl}}
+    <a href="{{repoSrcUrl}}{{component.file}}" rel="noopener">
+    {{/if}}
     <code>{{component.file}}</code>
+    {{#if repoSrcUrl}}</a>{{/if}}
 </p>
 
 {{#if component.description}}
